--- a/index.html
+++ b/index.html
@@ -73,19 +73,34 @@
                         <!-- Hero Heading -->
                         <h2 class="hero__heading">
                             <span>
-                                <span class="fspan">Custom</span> <span class="lspan">Infrastructure</span>
+                                <span class="fspan">Custom</span> 
                             </span>
                             <span>
-                                <span class="fspan">Colocation</span> <span class="lspan"> Data Centers</span>
+                                <span class="lspan">Infrastructure</span>
                             </span>
                             <span>
-                                <span class="fspan">Flexible</span> <span class="lspan"> Edge Deployment</span>
+                                <span class="fspan">Colocation</span>
                             </span>
                             <span>
-                                <span class="fspan">Securer</span> <span class="lspan"> Cloud Capabilities</span>
+                                <span class="lspan"> Data Centers</span>
                             </span>
                             <span>
-                                <span class="fspan">Sustainable</span> <span class="lspan"> Deployment</span>
+                                <span class="fspan">Flexible</span>
+                            </span>
+                            <span>
+                                <span class="lspan"> Edge Deployment</span>
+                            </span>
+                            <span>
+                                <span class="fspan">Securer</span> 
+                            </span>
+                            <span>
+                                <span class="lspan"> Cloud Capabilities</span>
+                            </span>
+                            <span>
+                                <span class="fspan">Sustainable</span>
+                            </span>
+                            <span>
+                                <span class="lspan"> Deployment</span>
                             </span>
                         </h2>
                         <script>
@@ -695,7 +710,7 @@
 
                     <img src="assets/image/02Map.png" usemap="#image-map" class="map">
                     <map name="image-map" class="map-area">
-                        <area id="area1" target="" alt="" data-maphilight="{" strokeColor":'yellow',"strokeWidth":5}"
+                        <area id="area1" target="" alt="" 
                             title="COX" href="" coords="223,238,212,280,251,272,247,274" shape="poly">
                         <area target="" alt="" title="Lenovo" href=""
                             coords="1321,134,1297,178,1349,171,1350,173,1321,134" shape="poly">
