--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
                 <div class="connect_hero_global_map show-on-scroll">
                     <!-- <img class="cox_svg" src="assets/svg/Line.svg" alt=""> -->
 
-                    <svg class="cox_svg" width="1093" height="1000" viewBox="0 0 1093 929" fill="none"
+                    <svg class="cox_svg" width="1093" height="825" viewBox="0 0 1093 875" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g id="Line">
                             <g id="Vector 17" filter="url(#filter0_dd_86_1293)">
                                 <path fill="transparent" stroke="url(#paint0_linear_86_1293)" stroke-width="4"
                                     d="M210 901.5C210 534 791.999 543.5 881.499 110" class="path" stroke-linecap="round"
                                     stroke-linejoin="round"></path>
-                                <path fill="transparent" stroke="blue" stroke-width="4"
+                                <path fill="transparent" stroke="url(#filter1_dd_86_1293)" stroke-width="6"
                                     d="M210 901.5C210 534 791.999 543.5 881.499 110" class="line2"></path>
                                 <path fill="transparent" stroke="url(#paint0_linear_86_1293)" stroke-width="4"
                                     d="M210 901.5C210 534 791.999 543.5 881.499 110" class="line1"></path>
@@ -351,7 +351,35 @@
             <div class="container">
                 <div class="globel__sec__content">
                     <div class="globel__sec__img show-on-scroll">
-                        <img class="global_img" src="assets/image/global.png" alt="">
+                        <!-- <img class="global_img" src="assets/image/global.png" alt=""> -->
+                        <div class="globe js-globe">
+                            <div class="svg-wrapper">
+                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                viewBox="0 0 984 984" width="984" height="984" style="enable-background:new 0 0 984 984;" xml:space="preserve">
+                                    <style type="text/css">
+                                        .st0{fill:#FFFFFF;}
+                                    </style>
+                                    <g>
+                                        <path class="st0" d="M968.5,492c0,31.2-3.1,62.4-9.2,93c-6.1,30.6-15.2,60.6-27.2,89.4c-23.9,57.6-59.3,110.4-103.5,154.4
+                                            c-44.1,44.1-96.9,79.4-154.5,103.2c-28.8,11.9-58.8,21-89.3,27c-30.6,6-61.7,9-92.9,9c-31.1,0-62.3-3.1-92.8-9.2
+                                            c-30.5-6.1-60.5-15.2-89.2-27.1c-57.5-23.9-110.2-59.3-154.2-103.3c-44-44.1-79.3-96.8-103-154.3c-11.9-28.8-20.9-58.7-26.9-89.2
+                                            c-6-30.5-9-61.6-9-92.7c0-31.1,3.1-62.2,9.1-92.7C32,368.8,41,338.9,53,310.2c23.8-57.5,59.2-110.1,103.2-154
+                                            c44-43.9,96.7-79.2,154.1-102.9c28.7-11.9,58.6-20.9,89.1-26.9c30.5-6,61.6-9,92.6-9c31.1,0,62.1,3.1,92.6,9.1
+                                            c30.5,6.1,60.3,15.1,89,27c57.4,23.8,109.9,59.1,153.8,103.1c43.9,43.9,79.1,96.5,102.8,153.9c11.9,28.7,20.9,58.5,26.9,89
+                                            c6,30.4,9,61.5,9,92.5H968.5z M966,492c0-31-3.1-62-9.1-92.5c-6-30.4-15.1-60.2-27-88.9c-23.8-57.3-59-109.8-102.9-153.6
+                                            c-43.9-43.8-96.4-79-153.7-102.6c-28.6-11.8-58.5-20.9-88.9-26.8c-30.4-6-61.4-9-92.4-9c-31,0-62,3.1-92.4,9.1
+                                            c-30.4,6-60.2,15.1-88.8,27c-57.2,23.7-109.6,58.9-153.4,102.8C113.7,201.3,78.6,253.8,55,311c-11.8,28.6-20.8,58.4-26.8,88.7
+                                            c-6,30.4-9,61.3-8.9,92.3c0,30.9,3.1,61.9,9.1,92.2c6,30.3,15.1,60.1,26.9,88.7C79,730,114.2,782.4,157.9,826.1
+                                            c43.8,43.7,96.1,78.8,153.3,102.4c28.6,11.8,58.3,20.8,88.6,26.8c30.3,6,61.2,8.9,92.1,8.9c30.9,0,61.8-3.1,92.1-9.1
+                                            c30.3-6,60-15,88.5-26.9c57.1-23.7,109.3-58.8,153-102.5c43.7-43.7,78.6-96,102.2-153.1c11.8-28.5,20.8-58.2,26.7-88.5
+                                            c6-30.3,8.9-61.2,8.9-92H966z"/>
+                                    </g>
+                                </svg>
+                            </div>
+                            <ul class="globe-list js-list"></ul>
+                            <canvas class="globe-canvas js-canvas"></canvas>
+                        </div>
+                        
                     </div>
                     <div class="globel__sec__txt">
                         <h2 class="sec__heading show-on-scroll">
@@ -399,7 +427,7 @@
                 </div>
                 <div class="bg__lines show-on-scroll">
 
-                    <svg width="1672" height="1300" viewBox="0 0 1672 1357" fill="none"
+                    <svg width="1672" height="1350" viewBox="0 0 1672 1357" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M1535.35 998.267C1420.81 1149.47 1212.64 1187.67 1070.41 1083.59C928.181 979.506 905.729 772.55 1020.26 621.347C1134.8 470.141 1342.97 431.941 1485.2 536.025C1627.43 640.127 1649.88 847.083 1535.35 998.267Z"
@@ -660,44 +688,44 @@
                             <circle class="connectdot" cx="253" cy="594" r="138" fill="url(#paint11_radial_1100_36059)"/>
                             <circle class="connectdot" cx="469" cy="275" r="138" fill="url(#paint12_radial_1100_36059)"/>
                             <g filter="url(#filter0_dd_1100_36059)">
-                                <path d="M818.012 282.501C857.512 222.001 928.013 306.001 906.512 516.001" stroke="url(#paint13_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M818.012 282.501C857.512 222.001 928.013 306.001 906.512 516.001" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                                <path d="M818.012 282.501C857.512 222.001 928.013 306.001 906.512 516.001" stroke="url(#paint13_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M818.012 282.501C857.512 222.001 928.013 306.001 906.512 516.001" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter1_dd_1100_36059)">
-                            <path d="M468.514 273.501C482.514 170.001 572.013 197.501 609.514 294.001" stroke="url(#paint14_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M468.514 273.501C482.514 170.001 572.013 197.501 609.514 294.001" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M468.514 273.501C482.514 170.001 572.013 197.501 609.514 294.001" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M468.514 273.501C482.514 170.001 572.013 197.501 609.514 294.001" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter2_dd_1100_36059)">
-                            <path d="M532.431 426.271C534.432 327.001 625.012 284.501 718.512 354.501" stroke="url(#paint15_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M532.431 426.271C534.432 327.001 625.012 284.501 718.512 354.501" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M532.431 426.271C534.432 327.001 625.012 284.501 718.512 354.501" stroke="url(#paint15_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M532.431 426.271C534.432 327.001 625.012 284.501 718.512 354.501" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter3_dd_1100_36059)">
-                            <path d="M817.156 283.665C819.156 184.395 857.737 56.3954 895.238 152.895" stroke="url(#paint16_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M817.156 283.665C819.156 184.395 857.737 56.3954 895.238 152.895" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M817.156 283.665C819.156 184.395 857.737 56.3954 895.238 152.895" stroke="url(#paint16_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M817.156 283.665C819.156 184.395 857.737 56.3954 895.238 152.895" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter4_dd_1100_36059)">
-                            <path d="M468.514 274.501C440.015 104.501 369.515 65.001 381.015 141.501" stroke="url(#paint17_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M468.514 274.501C440.015 104.501 369.515 65.001 381.015 141.501" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M468.514 274.501C440.015 104.501 369.515 65.001 381.015 141.501" stroke="url(#paint17_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M468.514 274.501C440.015 104.501 369.515 65.001 381.015 141.501" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter5_dd_1100_36059)">
-                            <path d="M253.514 591.501C247.515 493.001 276.014 414.501 309.238 475.896" stroke="url(#paint18_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M253.514 591.501C247.515 493.001 276.014 414.501 309.238 475.896" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M253.514 591.501C247.515 493.001 276.014 414.501 309.238 475.896" stroke="url(#paint18_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M253.514 591.501C247.515 493.001 276.014 414.501 309.238 475.896" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter6_dd_1100_36059)">
-                            <path d="M308.014 475.001C302.014 376.501 218.014 354.501 191.514 408.501" stroke="url(#paint19_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M308.014 475.001C302.014 376.501 218.014 354.501 191.514 408.501" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M308.014 475.001C302.014 376.501 218.014 354.501 191.514 408.501" stroke="url(#paint19_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M308.014 475.001C302.014 376.501 218.014 354.501 191.514 408.501" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter7_dd_1100_36059)">
-                            <path d="M531.014 427.501C363.513 241.001 295.514 427.501 309.515 474.501" stroke="url(#paint20_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M531.014 427.501C363.513 241.001 295.514 427.501 309.515 474.501" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M531.014 427.501C363.513 241.001 295.514 427.501 309.515 474.501" stroke="url(#paint20_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M531.014 427.501C363.513 241.001 295.514 427.501 309.515 474.501" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter8_dd_1100_36059)">
-                            <path d="M142.012 294.001C144.512 196.001 237.513 124.501 378.014 140.501" stroke="url(#paint21_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M142.012 294.001C144.512 196.001 237.513 124.501 378.014 140.501" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
+                            <path d="M142.012 294.001C144.512 196.001 237.513 124.501 378.014 140.501" stroke="url(#paint21_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M142.012 294.001C144.512 196.001 237.513 124.501 378.014 140.501" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>
                             </g>
                             <g filter="url(#filter9_dd_1100_36059)">
-                            <path d="M136.513 195.501C131.513 42.5012 330.013 98.0012 380.013 139.501" stroke="url(#paint22_linear_1100_36059)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M136.513 195.501C131.513 42.5012 330.013 98.0012 380.013 139.501" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>    
+                            <path d="M136.513 195.501C131.513 42.5012 330.013 98.0012 380.013 139.501" stroke="url(#paint22_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M136.513 195.501C131.513 42.5012 330.013 98.0012 380.013 139.501" stroke="url(#paint14_linear_1100_36059)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="connectline"/>    
                         </g>
                             <defs>
                             <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -1559,16 +1587,15 @@
 
     <script src="assets/js/common.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/617753/ThreeOrbitControls.js"></script>
     <script src="assets/js/index.js" defer></script>
+    <script src="assets/js/globalamp.js" defer></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type='text/javascript' src='https://davidlynch.org/projects/maphilight/jquery.maphilight.js'></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            // $(".map-area area").each(function(){
-            //         var d = $(this).data('maphilight') || {};
-            //         d.alwaysOn=true;
-            //     });
             $('.map').maphilight();
             $('.lenovo').mouseover(function(e) {
                 $('#squidchina').mouseover();
