--- a/podcast.html
+++ b/podcast.html
@@ -4329,7 +4329,7 @@
 
 
                                     <div class="jp-controls-holder">
-                                        <button id="filterBtn show-on-scroll">
+                                        <button id="filterBtn">
                                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <g clip-path="url(#clip0_63_1344)">
                                                 <path d="M1 4.75026H3.736C3.95064 5.53999 4.41917 6.23715 5.06933 6.73419C5.71948 7.23123 6.51512 7.50052 7.3335 7.50052C8.15188 7.50052 8.94752 7.23123 9.59767 6.73419C10.2478 6.23715 10.7164 5.53999 10.931 4.75026H23C23.2652 4.75026 23.5196 4.6449 23.7071 4.45737C23.8946 4.26983 24 4.01548 24 3.75026C24 3.48504 23.8946 3.23069 23.7071 3.04315C23.5196 2.85562 23.2652 2.75026 23 2.75026H10.931C10.7164 1.96053 10.2478 1.26336 9.59767 0.766328C8.94752 0.269291 8.15188 0 7.3335 0C6.51512 0 5.71948 0.269291 5.06933 0.766328C4.41917 1.26336 3.95064 1.96053 3.736 2.75026H1C0.734784 2.75026 0.48043 2.85562 0.292893 3.04315C0.105357 3.23069 0 3.48504 0 3.75026C0 4.01548 0.105357 4.26983 0.292893 4.45737C0.48043 4.6449 0.734784 4.75026 1 4.75026ZM7.333 2.00026C7.67912 2.00026 8.01746 2.10289 8.30525 2.29519C8.59303 2.48748 8.81734 2.76079 8.94979 3.08056C9.08224 3.40033 9.1169 3.7522 9.04937 4.09167C8.98185 4.43113 8.81518 4.74295 8.57044 4.9877C8.3257 5.23244 8.01388 5.39911 7.67441 5.46663C7.33494 5.53416 6.98307 5.4995 6.6633 5.36705C6.34353 5.23459 6.07022 5.01029 5.87793 4.72251C5.68564 4.43472 5.583 4.09638 5.583 3.75026C5.58353 3.28629 5.76807 2.84148 6.09615 2.51341C6.42422 2.18533 6.86903 2.00079 7.333 2.00026Z" fill="#BABFC5"/>
@@ -4470,7 +4470,7 @@
                                 <div class="episode__image">
                                     <img class="teacher show-on-scroll" src="assets/image/episode28.jpg" alt="image-description">
                                     <div class="play-btn-wrapper">
-                                        <a class="show-on-scroll" href="">
+                                        <a  href="podcast-detail.html">
                                             <svg class="play-btn" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <circle cx="24" cy="24" r="23" stroke="white" stroke-width="2"></circle>
                                                 <path d="M35.3684 24L18.3158 32.7514L18.3158 15.2486L35.3684 24Z" fill="white"></path>
@@ -4481,10 +4481,108 @@
                                 </div>
                                 <div class="episode__text">
                                     <div class="episode__head">
-                                        <h2 class="episode__heading show-on-scroll">#Episode 28: Chetna Mahajan </h2>
+                                        <a href="podcast-detail.html"> 
+                                            <h2 class="episode__heading show-on-scroll">#Episode 28: Chetna Mahajan </h2>
+                                        </a>
                                         <p class="date show-on-scroll">Date : 12 December 2021</p>
                                     </div>
                                     <p class="info show-on-scroll">ZoomInfo CIO, Chetna Mahajan believes IT can be reimagined. Join Mark and Chetna as they discuss the importance of company transparency, time vs value, and how a name change helps with external and internal perception.</p>
+
+                                </div>
+                            </div>
+                            <div class="episode__inner">
+                                <div class="episode__image">
+                                    <img class="teacher show-on-scroll" src="assets/image/episode27.jpg" alt="image-description">
+                                    <div class="play-btn-wrapper">
+                                        <a href="podcast-detail.html">
+                                            <svg class="play-btn" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="24" cy="24" r="23" stroke="white" stroke-width="2"></circle>
+                                                <path d="M35.3684 24L18.3158 32.7514L18.3158 15.2486L35.3684 24Z" fill="white"></path>
+                                            </svg>
+                                        </a>
+                                    </div>
+
+                                </div>
+                                <div class="episode__text">
+                                    <div class="episode__head">
+                                        <a href="podcast-detail.html"> 
+                                            <h2 class="episode__heading show-on-scroll">#Episode 27: Ryan Fay</h2>
+                                        </a>
+                                        <p class="date show-on-scroll">Date : 09 December 2021</p>
+                                    </div>
+                                    <p class="info show-on-scroll">Why should you challenge your assumptions? When should you build or buy edge? Join Mark and technology leader, Ryan Fay as they explore these topics, the possibilities of working from anywhere, cloud computing and more.</p>
+
+                                </div>
+                            </div>
+                            <div class="episode__inner">
+                                <div class="episode__image">
+                                    <img class="teacher show-on-scroll" src="assets/image/episode26.jpg" alt="image-description">
+                                    <div class="play-btn-wrapper">
+                                        <a  href="podcast-detail.html">
+                                            <svg class="play-btn" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="24" cy="24" r="23" stroke="white" stroke-width="2"></circle>
+                                                <path d="M35.3684 24L18.3158 32.7514L18.3158 15.2486L35.3684 24Z" fill="white"></path>
+                                            </svg>
+                                        </a>
+                                    </div>
+
+                                </div>
+                                <div class="episode__text">
+                                    <div class="episode__head">
+                                        <a href="podcast-detail.html"> 
+                                            <h2 class="episode__heading show-on-scroll">#Episode 26: Andi Mann </h2>
+                                        </a>
+                                        <p class="date show-on-scroll">Date : 07 December 2021</p>
+                                    </div>
+                                    <p class="info show-on-scroll">What should good leadership look like in ''a new normal'' workplace? WFH or WFA, Mark Thiele and Andi Mann discuss the importance of measuring what matters, old/new ways companies engage with employees, knowing your role, and how edge is the new office.</p>
+
+                                </div>
+                            </div>
+                            <div class="episode__inner">
+                                <div class="episode__image">
+                                    <img class="teacher show-on-scroll" src="assets/image/episode24.jpg" alt="image-description">
+                                    <div class="play-btn-wrapper">
+                                        <a  href="podcast-detail.html">
+                                            <svg class="play-btn" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="24" cy="24" r="23" stroke="white" stroke-width="2"></circle>
+                                                <path d="M35.3684 24L18.3158 32.7514L18.3158 15.2486L35.3684 24Z" fill="white"></path>
+                                            </svg>
+                                        </a>
+                                    </div>
+
+                                </div>
+                                <div class="episode__text">
+                                    <div class="episode__head">
+                                        <a href="podcast-detail.html"> 
+                                            <h2 class="episode__heading show-on-scroll">#Episode 24: Joe Weinman</h2>
+                                        </a>
+                                        <p class="date show-on-scroll">Date : 03 December 2021</p>
+                                    </div>
+                                    <p class="info show-on-scroll">Global keynote speaker, esteemed author and analyst @joeweinman is this week's special guest on the Edgevana Podcast! Join your host, @mthiele10 as they navigate through the topic of 5G, its relationship with edge, use cases and the need for digital transformation.</p>
+
+                                </div>
+                            </div>
+                            <div class="episode__inner">
+                                <div class="episode__image">
+                                    <img class="teacher show-on-scroll" src="assets/image/episode23.jpg" alt="image-description">
+                                    <div class="play-btn-wrapper">
+                                        <a  href="podcast-detail.html">
+                                            <svg class="play-btn" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <circle cx="24" cy="24" r="23" stroke="white" stroke-width="2"></circle>
+                                                <path d="M35.3684 24L18.3158 32.7514L18.3158 15.2486L35.3684 24Z" fill="white"></path>
+                                            </svg>
+                                        </a>
+                                    </div>
+
+                                </div>
+                                <div class="episode__text">
+                                    <div class="episode__head">
+                                        <a href="podcast-detail.html"> 
+                                            <h2 class="episode__heading show-on-scroll">#Episode 23: Tony Grayson</h2>
+                                        </a>
+                                        <p class="date show-on-scroll">Date : 02 December 2021</p>
+                                    </div>
+                                    <p class="info show-on-scroll">Sustainability is more important than ever and too many solutions are better on paper than in practice. Mark is joined by Tony Grayson to discuss some of today's eco-problems, how the industry can leave a better, greener footprint, things to consider and sustainability at the edge.</p>
 
                                 </div>
                             </div>
@@ -4642,8 +4740,8 @@
                                 <ul>
                                     <li class="show-on-scroll"><a class="item " href="podcast.html">Podcast</a></li>
                                     <li class="show-on-scroll"><a class="item " href="newsroom.html">News room</a></li>
-                                    <li class="show-on-scroll"><a class="item" href="podcast.html">Podcast</a></li>
-                                    <li class="show-on-scroll"><a class="item" href="#">News room</a></li>
+                                    
+                                    
                                 </ul>
                             </div>
                         </div>
