--- a/about-us.html
+++ b/about-us.html
@@ -868,6 +868,7 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="assets/js/about-us.js"></script>
 </body>
