--- a/contact-us.html
+++ b/contact-us.html
@@ -253,6 +253,7 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
 
 </body>
 
