--- a/industrie-blockchain.html
+++ b/industrie-blockchain.html
@@ -2471,47 +2471,9 @@
   <!-- === footer end === -->
 
   <!-- === script files === -->
-  <script>
-    // let faqSec = document.querySelector('.faq__sec .faq__svg');
-    // let quesMarkPath = document.querySelectorAll('#quesMark > path');
-    
-    // var currentX = '';
-    // var currentY = '';
-    // var movementConstant = .025;
-
-    // faqSec.addEventListener('mousemove',(e)=>{
-    //   for(let i of quesMarkPath){
-    //     i.style.transform = `translateY(${e.y * 0.14}px)`;
-    //     i.style.transform = `translateX(${e.x * 0.14})px)`;
-    //   }
-    // })
-      
-      // if (currentX == '') currentX = e.pageX;
-    //   var xdiff = e.pageX - currentX;
-    //   currentX = e.pageX;
-    //   if (currentY == '') currentY = e.pageY;
-    //   var ydiff = e.pageY - currentY;
-    //   currentY = e.pageY;
-
-    //   $('.parallax div').each(function(i, el) {
-    //     var movement = (i + 1) * (xdiff * movementConstant);
-    //     var movementy = (i + 1) * (ydiff * movementConstant);
-    //     var newX = $(el).position().left + movement;
-    //     var newY = $(el).position().top + movementy;
-    //     var cssObj = {
-    //       'left': newX + 'px',
-    //       'top': newY + 'px'
-    //     };
-
-    //     // $(el).css('left', newX + 'px');
-    //     // $(el).css('top', newY + 'px');
-    //     $(el).css({
-    //       "transform": "translate(" + newX + "px," + newY + "px)"
-    //     });
-    //   });
-    // });
-    </script>
+ 
   <script src="assets/js/common.js"></script>
+  <script src="assets/js/cursor-canvas.js"></script>
   <script src="assets/js/industrie.js"></script>
 </body>
 
