--- a/industrie-edge.html
+++ b/industrie-edge.html
@@ -2438,6 +2438,7 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
     <script src="assets/js/industrie.js"></script>
   </body>
 </html>
