--- a/podcast.html
+++ b/podcast.html
@@ -4788,6 +4788,7 @@
 
     <!-- script files -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
     <script src="assets/js/podcast.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://jplayer.org/latest/dist/jplayer/jquery.jplayer.min.js"></script>
