--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -425,5 +425,7 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
+    
 </body>
 </html>
