--- a/service.html
+++ b/service.html
@@ -814,6 +814,7 @@
 
     <!-- Service Js Link -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
     <script src="assets/js/service.js"></script>
 </body>
 
