--- a/sustainable.html
+++ b/sustainable.html
@@ -304,6 +304,7 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
     <script src="assets/js/industrie.js"></script>
     <script src="assets/js/faq-animation.js"></script>
     
