--- a/cookies.html
+++ b/cookies.html
@@ -472,5 +472,6 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
 </body>
 </html>
