--- a/indexPankaj.html
+++ b/indexPankaj.html
@@ -105,6 +105,7 @@
                         <h2 class="hero__heading">
                             <span>
                                 <span class="fspan">Custom</span> 
+                                <br>
                                 <span class="lspan">Infrastructure</span>
                             </span>
                             <span>
@@ -1207,79 +1208,7 @@
         </section>
         <!-- === Deploy Section End === -->
 
-        <!-- === Trusted Section Start === -->
-        <section class="trusted__sec">
-            <div class="container">
-                <div class="trusted__sec__txt">
-                    <!-- heading -->
-                    <h2 class="sec__heading show-on-scroll">TRUSTED BY</h2>
-                    <!-- Sub text -->
-                    <span class="trusted__txt__subheading show-on-scroll">gradiant flash</span>
-                </div>
-                <div class="trusted__sec__map">
-                    <!-- Background map -->
-<<<<<<< HEAD
-                    <!-- <img src="assets/image/02Map.png" alt=""> -->
-
-                    <img src="assets/image/02Map.png" usemap="#image-map" class="map">
-                    <map name="image-map" class="map-area">
-<<<<<<< HEAD
-                        <area id="area1" target="" alt="" 
-=======
-                        <area id="squidusa" id="area1" target="" alt="" 
->>>>>>> f9870b1bceff8af5271c8dc78f13632e63a02d69
-                            title="COX" href="" coords="223,238,212,280,251,272,247,274" shape="poly">
-                        <area id="squidchina" target="" alt="" title="Lenovo" href=""
-                            coords="1321,134,1297,178,1349,171,1350,173,1321,134" shape="poly">
-                    </map>
-
-=======
-                    <!-- <img src="assets/svg/line-map.svg" alt="image-description"> -->
-                    <!-- <img src="assets/image/02Map.png" alt="image-description"> -->
-                        <img src="assets/image/02Map.png" usemap="#image-map" class="map">
-                            <map name="image-map" class="map-area">
-                                <area id="squidusa" id="area1" target="" alt="image-description" title="COX" href=""
-                                    coords="223,238,212,280,251,272,247,274" shape="poly">
-                                <area id="squidchina" target="" alt="image-description" title="Lenovo" href=""
-                                    coords="1321,134,1297,178,1349,171,1350,173,1321,134" shape="poly">
-                            </map>
->>>>>>> 12019f06bc1fadf0a09c7acc4d8df046673fa770
-                    <!-- Logo List -->
-                </div>
-            </div>
-            <div class="trusted__logo__list">
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                        <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo1-with-bg.png" alt="image-description">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo2-with-bg.png" alt="image-description">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="image__wrapper">
-                            <img class="cox_svg lenovo" src="assets/image/trusted-logo3-with-bg.png" alt="image-description">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo4-with-bg.png" alt="image-description">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo5-with-bg.png" alt="image-description">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- === Trusted Section End === -->
+        
 
         <!-- === Info Cards Section Start === -->
         <section class="info__crd__sec">
@@ -1733,42 +1662,7 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/617753/ThreeOrbitControls.js"></script>
-    <script src="assets/js/index.js" defer></script>
-    <script src="assets/js/globalamp.js" defer></script>
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script type='text/javascript' src='https://davidlynch.org/projects/maphilight/jquery.maphilight.js'></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('.map').maphilight();
-            $('.lenovo').mouseover(function(e) {
-                $('#squidchina').mouseover();
-                }).mouseout(function(e) {
-                    $('#squidchina').mouseout();
-                }).click(function (e) {
-                    e.preventDefault();
-                });
-
-                $('.coxusa').mouseover(function (e) {
-                    $('#squidusa').mouseover();
-                }).mouseout(function (e) {
-                    $('#squidusa').mouseout();
-                }).click(function (e) {
-                    e.preventDefault();
-                });
-            });
-        </script>
-
-        <script>
-            var connectLine = document.getElementsByClassName('connectline');
-            setInterval(() => {
-                let randommpaLink = Math.floor(Math.random() * connectLine.length);
-                connectLine[randommpaLink].classList.add('isactive');
-            }, 500)
-        </script>
+    <script src="assets/js/cursor-canvas.js"></script>
 </body>
 
 </html>
