--- a/newsroom.html
+++ b/newsroom.html
@@ -733,6 +733,7 @@
     
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
     <script src="assets/js/news-room.js" defer></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     
