--- a/podcast-detail.html
+++ b/podcast-detail.html
@@ -500,8 +500,9 @@
 <!-- === footer end === -->
 
     <!-- === script files === -->
-    <script src="assets/js/podcast.js"></script>
     <script src="assets/js/common.js"></script>
+    <script src="assets/js/cursor-canvas.js"></script>
+    <script src="assets/js/podcast.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://jplayer.org/latest/dist/jplayer/jquery.jplayer.min.js"></script>
     <script src="https://jplayer.org/latest/dist/add-on/jplayer.playlist.min.js"></script>
