--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="bg__lines show-on-scroll">
+                <!-- <div class="bg__lines show-on-scroll">
 
                     <svg width="1672" height="1250" viewBox="0 0 1672 1357" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
@@ -695,7 +695,7 @@
                             </linearGradient>
                         </defs>
                     </svg>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- === Globel Section End === -->
