--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                         </ul>
                     </div>
                 </div>
-                <!-- <div class="bg__lines show-on-scroll">
+                <div class="bg__lines show-on-scroll">
 
                     <svg width="1672" height="1250" viewBox="0 0 1672 1357" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
@@ -695,7 +695,7 @@
                             </linearGradient>
                         </defs>
                     </svg>
-                </div> -->
+                </div>
             </div>
         </section>
         <!-- === Globel Section End === -->
@@ -1191,32 +1191,13 @@
                 </div>
                 <div class="trusted__sec__map">
                     <!-- Background map -->
-<<<<<<< HEAD
-                    <!-- <img src="assets/image/02Map.png" alt=""> -->
-
                     <img src="assets/image/02Map.png" usemap="#image-map" class="map">
                     <map name="image-map" class="map-area">
-<<<<<<< HEAD
-                        <area id="area1" target="" alt="" 
-=======
                         <area id="squidusa" id="area1" target="" alt="" 
->>>>>>> f9870b1bceff8af5271c8dc78f13632e63a02d69
                             title="COX" href="" coords="223,238,212,280,251,272,247,274" shape="poly">
                         <area id="squidchina" target="" alt="" title="Lenovo" href=""
                             coords="1321,134,1297,178,1349,171,1350,173,1321,134" shape="poly">
                     </map>
-
-=======
-                    <!-- <img src="assets/svg/line-map.svg" alt="image-description"> -->
-                    <!-- <img src="assets/image/02Map.png" alt="image-description"> -->
-                        <img src="assets/image/02Map.png" usemap="#image-map" class="map">
-                            <map name="image-map" class="map-area">
-                                <area id="squidusa" id="area1" target="" alt="image-description" title="COX" href=""
-                                    coords="223,238,212,280,251,272,247,274" shape="poly">
-                                <area id="squidchina" target="" alt="image-description" title="Lenovo" href=""
-                                    coords="1321,134,1297,178,1349,171,1350,173,1321,134" shape="poly">
-                            </map>
->>>>>>> 12019f06bc1fadf0a09c7acc4d8df046673fa770
                     <!-- Logo List -->
                 </div>
             </div>
