update code of policy pages

--- a/cookies.html
+++ b/cookies.html
@@ -92,7 +92,7 @@
 
     <main>
         <!-- === banner sec start === -->
-        <section class="sec__content__wrapper ">
+        <section class="sec__content__wrapper banner-modifier">
             <div class="container">
                 <!-- sec head -->
                 <div class="breadcrums">
@@ -107,7 +107,7 @@
                 <!-- sec content -->
                 <div class="sec__content">
                     <div class="sec__content__inner">
-                        <h2 class="sec__heading show-on-scroll">Edgevana Cookies Policy</h2>
+                        <h2 class="sec__heading show-on-scroll mb-50">Edgevana Cookies Policy</h2>
                         <div class="sec__text">
                             <div class="policy__text ">
                                 <p class="policy__brief show-on-scroll">Please read the following carefully to understand our policies and practices regarding the use of cookies on the Edgevana websites and Edgevana Marketplace (“Website”). By using or accessing our Website, you agree to this cookie policy (“Policy”).  This Policy may change from time to time and your continued use of the Website is deemed to be acceptance of such changes.  Please check the Policy periodically for updates.</p>
