--- a/industrie-blockchain.html
+++ b/industrie-blockchain.html
@@ -2285,11 +2285,11 @@
               <h3 class="sec__heading show-on-scroll">FAQ’s</h3>
               <ul class="faq__list">
                 <li class="faq__item">
-                  <h4 class="faq__ques active show-on-scroll">
+                  <h4 class="faq__ques show-on-scroll active">
                     <span>Q</span>Nam tincidunt convallis velit urna enim nisi
                     sed semper eget. Laoreet diam congue in.
                   </h4>
-                  <p class="faq__ans p__txt show-on-scroll">
+                  <p class="faq__ans p__txt ">
                     Erat tincidunt lacinia fermentum risus varius. Imperdiet
                     metus ac euismod vulputate. Sed et dignissim egestas iaculis
                     libero nunc scelerisque sem cursus. Tristique vel mauris
@@ -2301,7 +2301,7 @@
                     <span>Q</span>Mauris venenatis lorem senectus risus sed
                     orci.
                   </h4>
-                  <p class="faq__ans p__txt show-on-scroll">
+                  <p class="faq__ans p__txt ">
                     We start simple, we work with you to clarify the vision and
                     objectives for the project and then we work backwards on a
                     combination of usage model and ROI requirements
@@ -2313,7 +2313,7 @@
                     <span>Q</span>Nulla magna arcu dolor netus hendrerit ut
                     iaculis libero nunc scelerisque.
                   </h4>
-                  <p class="faq__ans p__txt show-on-scroll">
+                  <p class="faq__ans p__txt ">
                     We start simple, we work with you to clarify the vision and
                     objectives for the project and then we work backwards on a
                     combination of usage model and ROI requirements
@@ -2343,7 +2343,7 @@
         <!-- sec content -->
         <div class="sec__content">
           <div class="contact__btn">
-            <a href="#" class="primary-btn show-on-scroll">Contact</a>
+            <a href="contact-us.html" class="primary-btn show-on-scroll">Contact</a>
           </div>
         </div>
       </div>
