--- a/industrie-edge.html
+++ b/industrie-edge.html
@@ -2283,7 +2283,7 @@
                                 <li class="faq__item">
                                     <h4 class="faq__ques active show-on-scroll"><span>Q</span>Nam tincidunt convallis velit urna enim nisi sed
                                         semper eget. Laoreet diam congue in.</h4>
-                                    <p class="faq__ans p__txt show-on-scroll">
+                                    <p class="faq__ans p__txt">
                                         Erat tincidunt lacinia fermentum risus varius. Imperdiet metus ac euismod
                                         vulputate. Sed et dignissim egestas iaculis libero nunc scelerisque sem cursus.
                                         Tristique vel mauris lacinia volutpat fusce nunc.
@@ -2292,7 +2292,7 @@
                                 <li class="faq__item">
                                     <h4 class="faq__ques show-on-scroll"><span>Q</span>Mauris venenatis lorem senectus risus sed orci.
                                     </h4>
-                                    <p class="faq__ans p__txt show-on-scroll">We start simple, we work with you to clarify the
+                                    <p class="faq__ans p__txt ">We start simple, we work with you to clarify the
                                         vision and objectives for the
                                         project and then we work backwards on a combination of usage model and
                                         ROI requirements
@@ -2300,7 +2300,7 @@
                                 <li class="faq__item">
                                     <h4 class="faq__ques show-on-scroll"><span>Q</span>Nulla magna arcu dolor netus hendrerit ut
                                         iaculis libero nunc scelerisque.</h4>
-                                    <p class="faq__ans p__txt show-on-scroll">We start simple, we work with you to clarify the
+                                    <p class="faq__ans p__txt ">We start simple, we work with you to clarify the
                                         vision and objectives for the
                                         project and then we work backwards on a combination of usage model and
                                         ROI requirements
