--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -92,7 +92,7 @@
 
     <main>
         <!-- === banner sec start === -->
-        <section class="sec__content__wrapper">
+        <section class="sec__content__wrapper banner-modifier">
             <div class="container">
                 <!-- sec head -->
                 <div class="breadcrums">
@@ -107,7 +107,7 @@
                 <!-- sec content -->
                 <div class="sec__content">
                     <div class="sec__content__inner">
-                        <h2 class="sec__heading show-on-scroll">Edgevana Privacy Policy</h2>
+                        <h2 class="sec__heading show-on-scroll mb-50">Edgevana Privacy Policy</h2>
                         <div class="sec__text">
                             <div class="policy__text">
                                 <p class="policy__brief show-on-scroll">Edgevana is committed to protecting the privacy of visitors of the Edgevana website(s), individuals who register to use the products and services, individuals who use our services, and business partners. This privacy page describes our privacy practices in relation to your activities with us, including your choices regarding use, access, and correction of Personal Data.</p>
@@ -206,7 +206,7 @@
                             <p class="policy__brief mb-50 show-on-scroll">Typically, the Personal Data includes name, business affiliation, business address, telephone number, and email address, and any other personal details provided or required to resolve inquiries or complaints.
                                 Customer Support and Service. When Customers contact us for support or other customer service requests, we maintain support tickets and other records related to the requests. We may also collect call recordings related to support and customer service-related calls.</p> 
                             <p class="policy__brief mb-50 show-on-scroll">Usage Details. We collect information about Customers’ usage of our Services, including IP address, Customer ID, email address, and other usage statistics. We do not collect usage details about Customer end users, except as necessary to provide and support the Services requested by Customers.</p> 
-                            <p class="policy__brief mb-50 show-on-scroll">When you visit our Sites, our server automatically collects certain browser or device generated information, which may in some cases constitute Personal Data, including but not limited to:</p> 
+                            <p class="policy__brief show-on-scroll">When you visit our Sites, our server automatically collects certain browser or device generated information, which may in some cases constitute Personal Data, including but not limited to:</p> 
                         </div>
                     </div>
                 </div>
