--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -94,7 +94,7 @@
 
     <main>
         <!-- === banner sec start === -->
-        <section class="sec__content__wrapper">
+        <section class="sec__content__wrapper banner-modifier">
             <div class="container">
                 <!-- sec head -->
                 <div class="breadcrums">
@@ -111,7 +111,7 @@
                     <div class="sec__content__inner">
                         <h2 class="sec__heading show-on-scroll">Website Terms of Use</h2>
                         <p class="policy__brief text-grey show-on-scroll">Please Read Carefully Prior To Using This Website</p>
-                        <div class="sec__text">
+                        <div class="sec__text mt-70">
                             <h2 class="policy__heading show-on-scroll">1. Acceptance of Terms and Conditions.</h2>
                             <div class="policy__text">
                                 <p class="policy__brief show-on-scroll">Use of this Edgevana, Inc (“Edgevana“) website (this “Website“)
