--- a/index.html
+++ b/index.html
@@ -1221,27 +1221,27 @@
                     <!-- Slides -->
                     <div class="swiper-slide">
                         <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo1-with-bg.png" alt="image-description">
+                            <img class="cox_svg lenove" src="assets/image/trusted-logo1-with-bg.png" alt="image-description">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo2-with-bg.png" alt="image-description">
+                            <img class="cox_svg qwr" src="assets/image/trusted-logo2-with-bg.png" alt="image-description">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="image__wrapper">
-                            <img class="cox_svg lenovo" src="assets/image/trusted-logo3-with-bg.png" alt="image-description">
+                            <img class="cox_svg ddg" src="assets/image/trusted-logo3-with-bg.png" alt="image-description">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo4-with-bg.png" alt="image-description">
+                            <img class="cox_svg sdggg" src="assets/image/trusted-logo4-with-bg.png" alt="image-description">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="image__wrapper">
-                            <img class="cox_svg coxusa" src="assets/image/trusted-logo5-with-bg.png" alt="image-description">
+                            <img class="cox_svg sg" src="assets/image/trusted-logo5-with-bg.png" alt="image-description">
                         </div>
                     </div>
                 </div>
@@ -1704,12 +1704,22 @@
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="assets/js/index.js" defer></script>
 
+    <script>
+        window.addEventListener('load',()=>{
+            let SlideSlide = document.querySelectorAll('.trusted__logo__list .cox_svg')
+            SlideSlide.forEach(elem =>{
+                // console.log(elem)
+            })
+        });
+    </script>
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script type='text/javascript' src='https://davidlynch.org/projects/maphilight/jquery.maphilight.js'></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('.map').maphilight({ stroke: false, fillColor: '009DDF', fillOpacity: 1, });
-                
+            var activeTrusted=document.getElementsByClassName('trusted__logo__list'); 
+            var activeclass=activeTrusted[0].getElementsByClassName('swiper-slide-active');
             $('.lenovo').mouseover(function(e) {
                 $('#lenovo').css('display','block');    
                 // $('#squidchina').mouseover();
