--- a/indexPankaj.html
+++ b/indexPankaj.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="assets/font/stylesheet.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/css/stylesheet.css">
-
-
 </head>
 
 <body>
@@ -253,9 +251,6 @@
             <div class="container">
                 <div class="globel__sec__content">
                     <div class="globel__sec__img show-on-scroll">
-                        <div class="globe js-globe">
-                            <canvas class="globe-canvas js-canvas"></canvas>
-                        </div>
                     </div>
                     <div class="globel__sec__txt">
                         <h2 class="sec__heading show-on-scroll">
@@ -1408,8 +1403,9 @@
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
-    <script src="assets/js/index.js"></script>
     <script src="assets/js/cursor-canvas.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="assets/js/index.js" defer></script>
 </body>
 
 </html>
