--- a/index-copy.html
+++ b/index-copy.html
@@ -1652,7 +1652,7 @@
                 </div>
                 <div class="copywrite__text">
                     <div class="copywrite__info show-on-scroll">
-                        <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                        <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                     </div>
                     <div class="copywrite__links">
                         <ul>
@@ -1665,6 +1665,7 @@
             </div>
         </div>
     </footer>
+
     <!-- === footer end === -->
 
     <!-- === script files === -->
