--- a/cookies.html
+++ b/cookies.html
@@ -368,7 +368,7 @@
         <!-- === content section end === -->
     </main>
 
-     <!-- === footer start === -->
+    <!-- === footer start === -->
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
@@ -455,7 +455,7 @@
                 </div>
                 <div class="copywrite__text">
                     <div class="copywrite__info show-on-scroll">
-                        <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                        <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                     </div>
                     <div class="copywrite__links">
                         <ul>
@@ -468,8 +468,8 @@
             </div>
         </div>
     </footer>
-    <!-- === footer end === -->
 
+    <!-- === footer end === -->
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
