--- a/newsroom.html
+++ b/newsroom.html
@@ -101,7 +101,7 @@
                 <div class="sec__content">
                     <div class="sec__header">
                         <div class="breadcrums show-on-scroll">
-                            <a class="show-on-scroll is-visible" href="#">Home /</a>
+                            <a class="show-on-scroll is-visible" href="index.html">Home /</a>
                             <span class="active__link show-on-scroll is-visible">Partner</span>
                         </div>
                         <div class="sec__news_room__tabs show-on-scroll">
@@ -2293,7 +2293,7 @@
                 </div>
                 <div class="copywrite__text">
                     <div class="copywrite__info show-on-scroll">
-                        <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                        <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                     </div>
                     <div class="copywrite__links">
                         <ul>
@@ -2306,6 +2306,7 @@
             </div>
         </div>
     </footer>
+
     <!-- === footer end === -->
     
     
