--- a/partner.html
+++ b/partner.html
@@ -6548,7 +6548,7 @@
                 </div>
                 <div class="copywrite__text">
                     <div class="copywrite__info show-on-scroll">
-                        <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                        <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                     </div>
                     <div class="copywrite__links">
                         <ul>
@@ -6561,6 +6561,7 @@
             </div>
         </div>
     </footer>
+
     <!-- === footer end === -->
 
     <!-- === script files === -->
