--- a/podcast.html
+++ b/podcast.html
@@ -4701,7 +4701,7 @@
         <!-- === recent episodes sec end === -->
     </main>
 
-     <!-- === footer start === -->
+    <!-- === footer start === -->
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
@@ -4788,7 +4788,7 @@
                 </div>
                 <div class="copywrite__text">
                     <div class="copywrite__info show-on-scroll">
-                        <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                        <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                     </div>
                     <div class="copywrite__links">
                         <ul>
@@ -4801,6 +4801,7 @@
             </div>
         </div>
     </footer>
+
     <!-- === footer end === -->
 
     <!-- script files -->
