--- a/contact-us.html
+++ b/contact-us.html
@@ -237,7 +237,7 @@
                 </div>
                 <div class="copywrite__text">
                     <div class="copywrite__info show-on-scroll">
-                        <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                        <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                     </div>
                     <div class="copywrite__links">
                         <ul>
@@ -250,6 +250,7 @@
             </div>
         </div>
     </footer>
+
     <!-- === footer end === -->
 
     <!-- === script files === -->
