--- a/indexPankaj.html
+++ b/indexPankaj.html
@@ -1122,6 +1122,7 @@
         </section>
         <!-- === Testimonial Section End === -->
     </main>
+    <!-- === footer start === -->
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
@@ -1221,6 +1222,8 @@
             </div>
         </div>
     </footer>
+
+    <!-- === footer end === -->
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
