--- a/indexpooran.html
+++ b/indexpooran.html
@@ -309,6 +309,7 @@
         <!-- === Globel Section End === -->
     
     </main>
+    <!-- === footer start === -->
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
@@ -408,6 +409,8 @@
             </div>
         </div>
     </footer>
+
+    <!-- === footer end === -->
 
     <!-- === script files === -->
     <script src="assets/js/common.js"></script>
