--- a/industrie-blockchain.html
+++ b/industrie-blockchain.html
@@ -2456,7 +2456,7 @@
               </div>
               <div class="copywrite__text">
                   <div class="copywrite__info show-on-scroll">
-                      <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                      <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                   </div>
                   <div class="copywrite__links">
                       <ul>
@@ -2469,6 +2469,7 @@
           </div>
       </div>
   </footer>
+
   <!-- === footer end === -->
 
   <!-- === script files === -->
