--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -321,7 +321,7 @@
         <!-- === content section end === -->
     </main>
 
-     <!-- === footer start === -->
+    <!-- === footer start === -->
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
@@ -408,7 +408,7 @@
                 </div>
                 <div class="copywrite__text">
                     <div class="copywrite__info show-on-scroll">
-                        <p>Copyright © 2021 Edgevana All Rights Reserved.</p>
+                        <p>Copyright © <span class="copyright__dynmic__year">2028</span> Edgevana All Rights Reserved.</p>
                     </div>
                     <div class="copywrite__links">
                         <ul>
@@ -421,6 +421,7 @@
             </div>
         </div>
     </footer>
+
     <!-- === footer end === -->
 
 
