--- a/newsroom.html
+++ b/newsroom.html
@@ -513,9 +513,11 @@
                             </div>
                         </div>
                         <div class="feature__stories">
+                        <div class="cursor__wrapper">
                             <div class="cursor">
                                 <span></span>
                             </div>
+                        </div>
                         <div class="sec__heading show-on-scroll">
                             Featured Stories
                         </div>
